subseção tracker construída + ajustes necessários nas abas gráficos e árvore

--- a/SITE/tracker.qmd
+++ b/SITE/tracker.qmd
@@ -1,30 +1,9 @@
 ---
 title: "Tracker"
-listing:
-  contents: "tracker"          # lista os .md em SITE/tracker/
-  sort: "date desc"
-  type: default
-  categories: true
-  fields: [title, date, categories, description]
 page-layout: article
 ---
 
-> Registro rápido dos fatos do projeto. Colaboradores do repositório podem adicionar novas entradas através do formulário web.
+Em desenvolvimento...
 
-<div class="alert alert-info d-flex align-items-center" role="alert">
-  <svg width="20" height="20" fill="currentColor" class="me-2" viewBox="0 0 16 16">
-    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-  </svg>
-  <div>
-    <strong>Para colaboradores:</strong> Use o formulário web para adicionar novas entradas automaticamente.
-    <a href="tracker/new.html" class="btn btn-sm btn-primary ms-2">
-      ➕ Nova Entrada
-    </a>
-  </div>
-</div>
 
-## Instruções para Colaboradores
-1. **Clique em "Nova Entrada"** acima
-2. **Faça login** com sua conta GitHub
-3. **Preencha o formulário** com os dados da entrada
-4. **Publique** - o site será atualizado automaticamente
+
